# sqlx_run_with_panic

./: Cargo.toml  test.db
migrations/: 20210722204845_base.sql
src/: main.rs
